# UBNetDefOrchestrator

./: .gitignore  pyproject.toml  sonar-project.properties  test.csv
src/ubnetdeforchestrator/: Person.py  Proxmox.py  ProxmoxInfra.py  ProxmoxSysSecStudent.py  ProxmoxSysSecTeam.py  SysSecStudent.py  SysSecTeam.py  __init__.py  infra.py  main.py
src/ubnetdeforchestrator/ClassManager/: Assignment.py  Class.py  Team.py
src/ubnetdeforchestrator/Infra/: Infra.py  Proxmox.py
src/ubnetdeforchestrator/Roles/: PersonRoleAssignment.py  Role.py
src/ubnetdeforchestrator/commands/: delete_vms.py  login.py  migrate.py  rename_vms.py  setup_networks.py  test.py
src/ubnetdeforchestrator/commands/syssec/: deploy_vm.py  load_students.py  setup.py  syssec.py  teardown.py  test.py  update_vm.py
src/ubnetdeforchestrator/syssec/: Infra.py  Student.py  Team.py
src/vm/: ProxmoxMachine.py  VirtualMachine.py
tests/: test_ProxmoxConnection.py  test_test.py
ubnetdeforchestrator/: MachineManager.py  ProxmoxLocation.py  ProxmoxMachine.py  ProxmoxManager.py  ProxmoxPoolLocation.py  ProxmoxTagLocation.py
