[project]
name = "ubnetdeforchestrator"
version = "0.1.0"
description = ""
authors = [
    {name = "Blake",email = "80996688+BlakeTnr@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "proxmoxer (>=2.2.0,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)"
]

[tool.poetry]
packages = [{include = "ubnetdeforchestrator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
